<resources>
    <string name="app_name">TodoTask</string>
    <string name="todo_task">Todo Task</string>
    <string name="add">Add</string>
    <string name="delete">delete button\n</string>
    <string name="todo_task_name">Todo task name</string>
    <string name="update">Update..</string>
    <string name="update_task">Update Task</string>
    <string name="add_task">Add Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adds">add</string>
    <string name="todo_task_details">Todo task details</string>
    <string name="todo_task_detailsa">Todo task details...</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="back_button">back button</string>
    <string name="todotask">TodoTask</string>
</resources>