<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TodoTaskFragment">

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/todoTask_recyclerView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <ImageButton
      android:id="@+id/btn_add"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="50dp"
      android:layout_marginEnd="50dp"
      android:background="@null"
      android:contentDescription="@string/adds"
      app:srcCompat="@drawable/baseline_add_circle_24"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>

  <Button
      android:id="@+id/btn_add_load"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/load"
      android:layout_marginTop="50dp"
      android:fontFamily="@font/bubble_gumsans_regular"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/todoTask_recyclerView"/>

  <Button
      android:id="@+id/btn_add_save"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/save"
      android:layout_marginTop="16dp"
      android:fontFamily="@font/bubble_gumsans_regular"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btn_add_load"/>


</androidx.constraintlayout.widget.ConstraintLayout>